@@ -1,3 +1,12 @@
+2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b15
+
+ * New: function generateCaption()
+
+ * New: function getLabelByIndex()
+
+ * Change: Use label for feature block.
+	   Now you can feature any type of item.
+
 2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b14
 
  * New: function toogleButton()
